objects/PromoCode_by_Event__c.object
<CustomObject>
    <description>Promo Code assignment to Attendee Rep by Event</description>
    <fields>
        <fullName>Event_User__c</fullName>
        <label>Event+User</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipName>Promote_Codes_by_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Promo_Code__c</fullName>
        <label>Promo Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Promote_Codes_by_Event</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Promo Code by Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Promo_Code__c</columns>
        <columns>User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Promo Code by Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promo Codes by Event</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>